fix footer spacing

--- a/styles/style.css
+++ b/styles/style.css
@@ -37,7 +37,7 @@ a:hover {
     margin-left: auto;
     margin-right: auto;
     margin-top: 250px;
-    margin-bottom: 700px;
+    margin-bottom: 650px;
     width: 50%;
     text-align: center;
 }
